<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.nycschools.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.mSchool.schoolName}"
                android:textColor="@color/black"
                android:textSize="@dimen/size_heading"
                android:textStyle="bold"
                tools:text="@string/school_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading_score"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.mSchool.scoreReading}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="100" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_writing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writing_score"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_writing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.mSchool.scoreWriting}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="100" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_math"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math_score"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_math"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.mSchool.scoreMath}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="100" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_label_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_school_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.30"
                android:text="@{viewModel.mSchool.overviewParagraph}"
                android:textColor="@color/black"
                android:textSize="@dimen/size_body"
                tools:text="@string/overview_sample" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autoLink="map"
                    android:text="@{viewModel.mSchool.address}"
                    android:textColor="@color/black"
                    android:textColorLink="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="@string/sample_address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autoLink="phone"
                    android:text="@{viewModel.mSchool.phoneNumber}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="@string/sample_phone" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@{viewModel.mSchool.website}"
                android:textColor="@color/black"
                android:textSize="@dimen/size_body"
                tools:text="@string/school_website" />

        </LinearLayout>
    </ScrollView>
</layout>