<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="school"
            type="com.example.nycschools.models.NycSchool" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                tools:text="@string/school_name"
                android:textColor="@color/black"
                android:textSize="@dimen/size_heading"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_school_name"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    tools:text="@string/sample_address"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_below="@id/ll_address"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_body"
                    android:autoLink="phone"
                    tools:text="@string/sample_phone"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_phone"
                android:layout_alignParentStart="true"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:autoLink="web"
                tools:text="@string/school_website"
                android:textColor="@color/black"
                android:textSize="@dimen/size_body" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>